@@ -10,6 +10,9 @@ import org.jminor.framework.db.EntityConnectionProvider;
 import org.jminor.framework.db.local.LocalEntityConnectionProvider;
 import org.jminor.swing.framework.model.reporting.EntityReportUtil;
 
+import net.sf.jasperreports.engine.JRDataSource;
+import net.sf.jasperreports.engine.JRException;
+import net.sf.jasperreports.engine.JRField;
 import net.sf.jasperreports.engine.JasperPrint;
 import org.junit.Test;
 
@@ -25,7 +28,7 @@ public class JasperReportsWrapperTest {
           System.getProperty("jminor.unittest.password", "tiger"));
 
   @Test
-  public void fillJdbcReport() throws Exception {
+  public void fillJdbcReport() throws ReportException {
     final EntityConnectionProvider connectionProvider = new LocalEntityConnectionProvider(UNIT_TEST_USER,
             new H2Database("JasperReportsWrapperTest.fillJdbcReport", System.getProperty("jminor.db.initScript")));
     final HashMap<String, Object> reportParameters = new HashMap<>();
@@ -34,6 +37,31 @@ public class JasperReportsWrapperTest {
             new JasperReportsWrapper("build/test/empdept_employees.jasper", reportParameters),
             connectionProvider).getResult();
     assertNotNull(print);
+    EntityReportUtil.fillReport(
+            new JasperReportsWrapper("build/test/empdept_employees.jasper"),
+            connectionProvider).getResult();
+  }
+
+  @Test
+  public void fillDataSourceReport() throws ReportException {
+    final JasperReportsWrapper wrapper = new JasperReportsWrapper("build/test/empdept_employees.jasper");
+    final JasperReportsDataWrapper dataWrapper = new JasperReportsDataWrapper(new JRDataSource() {
+          boolean done = false;
+          @Override
+          public boolean next() throws JRException {
+            if (done) {
+              return false;
+            }
+
+            return done = true;
+          }
+
+          @Override
+          public Object getFieldValue(final JRField jrField) throws JRException {
+            return null;
+          }
+        });
+    wrapper.fillReport(dataWrapper);
   }
 
   @Test(expected = ReportException.class)
